--- a/ExamenTest/src/main/webapp/WEB-INF/web.xml
+++ b/ExamenTest/src/main/webapp/WEB-INF/web.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:web="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd" version="5.0">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:web="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd http://xmlns.jcp.org/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="5.0">
   <servlet>
     <description></description>
-    <display-name>logica</display-name>
-    <servlet-name>logica</servlet-name>
-    <servlet-class>logica</servlet-class>
+    <display-name>Logica</display-name>
+    <servlet-name>Logica</servlet-name>
+    <servlet-class>Logica</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>logica</servlet-name>
-    <url-pattern>/logica</url-pattern>
+    <servlet-name>Logica</servlet-name>
+    <url-pattern>/Logica</url-pattern>
   </servlet-mapping>
   <display-name>ExamenTest</display-name>
   <welcome-file-list>
@@ -28,5 +28,15 @@
   <servlet-mapping>
     <servlet-name>Navegacion</servlet-name>
     <url-pattern>/Navegacion</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>CalculoPuntiacion</display-name>
+    <servlet-name>CalculoPuntiacion</servlet-name>
+    <servlet-class>CalculoPuntiacion</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>CalculoPuntiacion</servlet-name>
+    <url-pattern>/CalculoPuntiacion</url-pattern>
   </servlet-mapping>
 </web-app>
